# massive-fetch

./: .env.example  .gitignore  CLAUDE.md  DESIGN_LOG.md  README.md  SDK_NOTES.md  SPEC.md  pyproject.toml
.claude/agents/: slice-reviewer.md
config/: default.yaml
config/universes/: stocks_sp500_qqq.yaml
src/massive_fetch/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py
src/massive_fetch/clients/: __init__.py  rest.py
src/massive_fetch/ingest/: __init__.py  base.py  crypto.py  stocks.py
src/massive_fetch/reference/: __init__.py  calendar.py  freshness.py  universe.py
src/massive_fetch/storage/: __init__.py  backend.py  manifest.py  parquet_io.py  paths.py
src/massive_fetch/transform/: __init__.py  normalize.py
tests/: conftest.py
tests/fixtures/: aapl_minute_sample.json
tests/integration/: test_crypto_minute_smoke.py  test_crypto_smoke.py  test_rest_smoke.py  test_stocks_smoke.py  test_universe_smoke.py
tests/unit/: test_backend.py  test_calendar.py  test_crypto_ingest.py  test_crypto_minute_ingest.py  test_manifest.py  test_normalize.py  test_rest.py  test_stocks_ingest.py  test_universe.py
