[project]
name = "massive-fetch"
version = "0.1.0"
description = "Download historical market data from Massive.com into local Parquet for backtesting and research."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "python-dotenv>=1.0",
]

[project.scripts]
massive-fetch = "massive_fetch.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/massive_fetch"]
