[project]
name = "massive-fetch"
version = "0.1.0"
description = "Download historical market data from Massive.com into local Parquet for backtesting and research."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "massive>=2.7.0,<3.0.0",
    "polars>=1.41.0",
    "pyarrow>=24.0.0",
    "pandas>=2.2",
    "lxml>=5.0",
]

[project.scripts]
massive-fetch = "massive_fetch.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/massive_fetch"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live API test, gated by MASSIVE_INTEGRATION=1",
]
